layout bug fix

--- a/styles/personalData.css
+++ b/styles/personalData.css
@@ -105,9 +105,8 @@
   height: 50px;
   cursor: pointer;
   margin-right: -30px;
-  transition: 2s;
+  transition: 1s;
   transform: rotate(0deg);
-
 }
 
 .personalData #span.active span {
@@ -117,9 +116,8 @@
   margin-right: -35px;
   cursor: pointer;
   z-index: 5000;
-  transition: 2s;
+  transition: 1s;
   transform: rotate(180deg);
-
 }
 
 
